@@ -89,7 +89,7 @@ CONF.SORTEDQUEUE_THRESHOLD = 100000/2
 
 ##CONF.N_MOD_GROUP_BY = 5
 #CONF.N_MOD_GROUP_BY = 40
-#CONF.N_MOD_GROUP_BY = 10
+CONF.N_MOD_GROUP_BY = 10
 
 #CONF.HASH_MODULE = "fairy/share/hash-rb18"
 #CONF.HASH_MODULE = "fairy/share/hash-1"
@@ -103,7 +103,12 @@ CONF.HASH_OPTIMIZE = true
 CONF.MOD_GROUP_BY_BUFFERING_POLICY = {:buffering_class => :MergeSortBuffer}
 
 ##CONF.MOD_GROUP_BY_CMSB_THRESHOLD = 10000
-CONF.MOD_GROUP_BY_CMSB_THRESHOLD = 100000
+#CONF.MOD_GROUP_BY_CMSB_THRESHOLD = 100000
+#CONF.MOD_GROUP_BY_CMSB_THRESHOLD = 200000
+CONF.MOD_GROUP_BY_CMSB_THRESHOLD = 400000
+#CONF.MOD_GROUP_BY_CMSB_THRESHOLD = 10000
+
+##CONF.MOD_GROUP_BY_CMSB_CHUNK_SIZE = 10000
 
 ##CONF.BARRIER_BUFFERING_POLICY = {:queuing_class => :OnMemoryQueue}
   CONF.BARRIER_MEMORY_BUFFERING_POLICY = {:queuing_class => :PoolQueue}
@@ -144,7 +149,9 @@ CONF.LOG_IMPORT_NTIMES_POP = 100000
 #CONF.LOG_LOCAL_OUTPUT_DEV = nil
 
 ##  CONF.PROCESSOR_MON_ON = false
+#CONF.PROCESSOR_MON_ON = true
 ##  CONF.PROCESSOR_MON_INTERVAL = 60
+CONF.PROCESSOR_MON_INTERVAL = 300
 ##  CONF.PROCESSOR_MON_PSFORMAT = "stat,vsz,rss,sz,pmem,pcpu,nlwp,time,wchan"
 ##  CONF.PROCESSOR_MON_OBJECTSPACE_INSPECT_ON = false
 
