@@ -117,6 +117,7 @@ module Fairy
 
     def_prop :MOD_GROUP_BY_BUFFERING_POLICY
     def_prop :MOD_GROUP_BY_CMSB_THRESHOLD
+    def_prop :MOD_GROUP_BY_CMSB_CHUNK_SIZE
 
     def_prop :BARRIER_MEMORY_BUFFERING_POLICY
 
@@ -282,6 +283,7 @@ module Fairy
 
   DEFAULT_CONF.MOD_GROUP_BY_BUFFERING_POLICY = {:buffering_class => :OnMemoryBuffer}
   DEFAULT_CONF.MOD_GROUP_BY_CMSB_THRESHOLD = 10000
+  DEFAULT_CONF.MOD_GROUP_BY_CMSB_CHUNK_SIZE = 1000
 
   DEFAULT_CONF.BARRIER_MEMORY_BUFFERING_POLICY = {:queuing_class => :OnMemoryQueue}
 
